--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -151,3 +151,21 @@ h2 {
 .address-card h2 {
   font-size: 1.15rem;
 }
+
+.filter {
+  background-color: whitesmoke;
+  padding:10px;
+  margin:5px 5px 5px 0;
+  border-radius: 3px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.meeting-form label {
+  padding-right:10px;
+}
+
+h3 {
+  margin: 20px 0;
+  font-weight: normal;
+}
